# WEB_Module_4

./: README.md
front-init/: main.py  pyproject.toml
front-init/storage/: data.json
